--- a/index.html
+++ b/index.html
@@ -10,8 +10,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Título</h1>
-    <h2>Subtítulo</h2>
-    <a href="#">link</a>
+    <header class="container">
+        <nav id="primary" class="grid grid-flow-col">
+            <div>
+                <img src="assets/icons/List.svg" alt="ícone de menu">
+                <strong>Menu</strong>
+            </div>
+            <div>
+                <img src="assets/Logo.svg" alt="TechNews Logo">
+            </div>
+            <div>
+                <strong>Buscar</strong>
+                <img src="assets/icons/MagnifyingGlass.svg" alt="ícone de lupa para pesquisa">
+            </div>
+        </nav>
+        <nav id="secondary" class="grid grid-flow-col">
+            <a href="#">Inteligência Artificial</a>
+            <a href="#">Blockchain</a>
+            <a href="#">Hologramas</a>
+            <a href="#">Internet</a>
+            <a href="#">Vestíveis</a>
+            <a href="#">Realidade Aumentada</a>
+            <a href="#">Realidade Virtual</a>
+        </nav>
+    </header>
 </body>
 </html>
