--- a/index.html
+++ b/index.html
@@ -36,20 +36,26 @@
     </header>
     <main class="grid container">
         <section id="featured" class="grid grid-flow-col gap-16">
-            <div>
+            <figure class="card">
                 <img src="assets/images/Image 01.png" alt="">
-            </div>
+                <figcaption>
+                    <span class="content-tag">Robótica</span>
+                    <h2 class="text-2xl">
+                        Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.
+                    </h2>
+                </figcaption>
+            </figure>
             <div class="grid grid-cols-2 gap-16">
-            <div>
+            <div class="card">
                 <img src="assets/images/Image 02.png" alt="">
             </div>
-            <div>
+            <div class="card">
                 <img src="assets/images/Image 03.png" alt="">
             </div>
-            <div>
+            <div class="card">
                 <img src="assets/images/Image 04.png" alt="">
             </div>
-            <div>
+            <div class="card">
                 <img src="assets/images/Image 05.png" alt="">
             </div>
         </div>
