styling the final sections

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 </article>
             </div>
         </section>
-        <div>
+        <aside>
             <div id="ads">
                 <img src="assets/Ads.png" alt="">
             </div>
@@ -219,7 +219,7 @@
                         <div>
                             <span class="content-tag">Software</span>
                             <h3 class="text-lg">
-                                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...
+                                Aplicativo de monitoramento ambiental ganha destaque, incentivando prática...
                             </h3>
                         </div>
                     </article>
@@ -231,7 +231,7 @@
                         <div>
                             <span class="content-tag">Realidade Virtual</span>
                             <h3 class="text-lg">
-                                Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial complet...
+                                Óculos de realidade virtual com feedback tátil proporcionam uma exp...
                             </h3>
                         </div>
                     </article>
@@ -274,7 +274,7 @@
     
                 </div>
             </section>
-        </div>
+        </aside>
     </main>
 </body>
 </html>
